Replace z-index with width: 100; solves the issue

--- a/src/components/Integration/styles.module.less
+++ b/src/components/Integration/styles.module.less
@@ -107,7 +107,7 @@
 
 .sourceConnectorImage {
   max-width: 55%;
-  z-index: 5;
+  width: 100%;
 
   @media (max-width: 768px) {
     max-width: 40%;
